--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,8 +13,20 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+<repositories>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
+</repositories>
 
   <dependencies>
+  <dependency>
+	    <groupId>com.github.unq-ui</groupId>
+	    <artifactId>2021s1-twitter</artifactId>
+	    <version>1.0.2</version>
+</dependency>
+  
         <dependency>
             <groupId>io.javalin</groupId>
             <artifactId>javalin</artifactId>
